--- a/post.html
+++ b/post.html
@@ -19,7 +19,7 @@
       <a href="/post.html">
         <div id="dottwo" class="browser_dot"></div>
       </a>
-      <a href="index.html#contact">
+      <a href="index.html#about">
         <div id="dotthree" class="browser_dot"></div>
       </a>
     </div>
@@ -28,8 +28,121 @@
     </ul>
   </div>
   <div class="main-container">
-    <h1>This is Portfolio page</h1>
+    <h1>Let's view some of our Projects</h1>
   </div>
+  <section class="sectwo">
+    <div class="main-container">
+      <div class="about_wrapper">
+        <div class="about_me">
+          <h4>E-Commerce Store with Django</h4>
+          <p>I feel glad to build the most awaited project for every developer - E-Commerce Store.
+            I use Django (python framework) for this purpose, backend is easily accessible by Django.
+            I collect some picture of different products from copyright-free website and use them.
+          </p>
+          <hr>
+
+          <h4>USEFUL METHODS</h4>
+
+          <p>E-Commerce store live view: <a target="_blank"
+              href="https://soumyadeep-portfolio.s3.ap-south-1.amazonaws.com/index.html"> Live View </a>
+          </p>
+
+          <div id="skills">
+            <ol>
+              <li>HTML - Frontend</li>
+              <li>CSS - Frontend (stylesheet)</li>
+              <li>JavaScript - Frontend (animations & DOM)</li>
+            </ol>
+
+            <ol>
+              <li>Djangomyadmin</li>
+              <li>Django - Backend (Database)</li>
+              <li>GitHub - Deploy (GIT)</li>
+            </ol>
+          </div>
+        </div>
+        <div class="social_links">
+          <img src="./assets/images/project1.png" alt="Project 1" id="social_img">
+          <h3>Source Code is available on GitHub</h3>
+          <a href="https://github.com/soumyadeepsinha" target="_blank">Github: @soumyadeepsinha</a>
+          <br />
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="secone">
+    <div class="main-container">
+      <div class="about_wrapper">
+        <div class="about_me">
+          <h4>Greetings users with React</h4>
+          <p>We have Momentum for Chrome and Tabliss for Firefox, inspired of these two extensions I build a React app
+            with the same features, like: show curr time and greet user accordingly. The main difference is - this react
+            app is optimized for all browsers (**isn't not an extension**)
+          </p>
+          <hr>
+
+          <h4>USEFUL METHODS</h4>
+
+          <p>Greetings live view: <a target="_blank"
+              href="https://soumyadeep-portfolio.s3.ap-south-1.amazonaws.com/index.html"> Live View </a>
+          </p>
+
+          <div id="skills">
+            <ol>
+              <li>HTML - Main Page</li>
+              <li>CSS - stylesheet</li>
+              <li>JSX - Frontend (compiled html in JavaScript)</li>
+            </ol>
+          </div>
+        </div>
+        <div class="social_links">
+          <img src="./assets/images/project1.jpg" alt="Project 2" id="social_img">
+          <h3>Source Code is available on GitHub</h3>
+          <a href="https://github.com/soumyadeepsinha" target="_blank">Github: @soumyadeepsinha</a>
+          <br />
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sectwo">
+    <div class="main-container">
+      <div class="about_wrapper">
+        <div class="about_me">
+          <h4>Weather Application</h4> with React
+          <p>This project shows us Current Weather Statictics with the Open Weather API.
+            We can access current weather of any location
+          </p>
+          <hr>
+
+          <h4>USEFUL METHODS</h4>
+
+          <p>E-Commerce store live view: <a target="_blank" href="https://weatherreports.netlify.app"> Live View </a>
+          </p>
+
+          <div id="skills">
+            <ol>
+              <li>HTML - Main Page</li>
+              <li>CSS - Stylesheet</li>
+              <li>JSX - Frontend (compiled html in JavaScript)</li>
+            </ol>
+          </div>
+        </div>
+        <div class="social_links">
+          <img src="./assets/images/project-weather.png" alt="Project 3" id="social_img">
+          <h3>Source Code is available on GitHub</h3>
+          <a href="https://github.com/soumyadeepsinha" target="_blank">Github: @soumyadeepsinha</a>
+          <br />
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="secone">
+    <div class="main-container">
+      <footer>
+        <h5 style="text-align: center;">@ Sinha'sWebDev - 2020</h5>
+      </footer>
+    </div>
+  </section>
 </body>
 
 </html>
