--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="/post.html">
               <div id="dottwo" class="browser_dot"></div>
             </a>
-            <a href="#contact">
+            <a href="#about">
               <div id="dotthree" class="browser_dot"></div>
             </a>
           </div>
@@ -66,7 +66,7 @@
       </div>
     </div>
   </section>
-  <section class="sectwo">
+  <section class="sectwo" id="about">
     <div class="main-container">
       <div class="about_wrapper">
         <div class="about_me">
@@ -112,7 +112,7 @@
       </div>
     </div>
   </section>
-  <section class="secone">
+  <section class="secone" id="projects">
     <div class="main-container">
       <h3 style="text-align: center;">Some of my past Projects</h3>
       <div class="post_wrapper">
