--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     content="In your role as a professional web developer, jr. or fullstackdeveloper, you're up for just about any website-building challenge. But, building a creative website portfolio">
   <meta name="keywords" content="web developer portfolio, developer portfolio, software engineer portfolio">
   <meta name="author" content="soumyadeepsinha soumyadeep-portfolio">
+  <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon/favicon.ico">
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Recursive&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/f158d309d9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link id="theme-style" rel="stylesheet" type="text/css" href="">
   <title>Soumya'sWebDev</title>
 </head>
 
 <body>
-  <section class="secone">
+  <section class="secone" id="hero">
     <div class="main-container">
       <div class="greeting_wrapper">
         <h1>Hi I'm Soumyadeep Sinha</h1>
@@ -112,7 +116,7 @@
       </div>
     </div>
   </section>
-  <section class="secone" id="projects">
+  <section class="secone">
     <div class="main-container">
       <h3 style="text-align: center;">Some of my past Projects</h3>
       <div class="post_wrapper">
@@ -122,7 +126,7 @@
             <div class="post_preview">
               <h6 class="post_title">E-Commerce Store</h6>
               <p class="post_intro">This is a Django E-Commerce project with Backend support</p>
-              <a href="/post.html">Read More</a>
+              <a href="/post.html#ecommerce">Read More</a>
             </div>
           </div>
         </div>
@@ -132,7 +136,7 @@
             <div class="post_preview">
               <h6 class="post_title">Weather App</h6>
               <p class="post_intro">This is a hourly updated Weather app developed with React</p>
-              <a href="/post.html">Read More</a>
+              <a href="/post.html#weather">Read More</a>
             </div>
           </div>
         </div>
@@ -174,6 +178,17 @@
   <section class="secone">
     <div class="main-container">
       <footer>
+        <div class="media_links" style="text-align: center;">
+          <h4>Follow along
+            <br />
+            And Check Out latest posts
+          </h4>
+          <ul class="social_icons">
+            <li><a href="twitter.com"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="instagram.com"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+          </ul>
+        </div>
         <h5 style="text-align: center;">@ Sinha'sWebDev - 2020</h5>
       </footer>
     </div>
