--- a/post.html
+++ b/post.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap"
-    rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon/favicon.ico">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Recursive&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/f158d309d9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Soumya'sWebDev | Posts</title>
 </head>
@@ -30,7 +34,7 @@
   <div class="main-container">
     <h1>Let's view some of our Projects</h1>
   </div>
-  <section class="sectwo">
+  <section class="sectwo" id="ecommerce">
     <div class="main-container">
       <div class="about_wrapper">
         <div class="about_me">
@@ -104,7 +108,7 @@
       </div>
     </div>
   </section>
-  <section class="sectwo">
+  <section class="sectwo" id="weather">
     <div class="main-container">
       <div class="about_wrapper">
         <div class="about_me">
@@ -139,6 +143,17 @@
   <section class="secone">
     <div class="main-container">
       <footer>
+        <div class="media_links" style="text-align: center;">
+          <h4>Follow along
+            <br />
+            And Check Out latest posts
+          </h4>
+          <ul class="social_icons">
+            <li><a href="twitter.com"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="instagram.com"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+          </ul>
+        </div>
         <h5 style="text-align: center;">@ Sinha'sWebDev - 2020</h5>
       </footer>
     </div>
