update header & title

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
   <script src="https://kit.fontawesome.com/f158d309d9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link id="theme-style" rel="stylesheet" type="text/css" href="">
-  <title>Soumya'sWebDev</title>
+  <title>Soumya-WebDev</title>
 </head>
 
 <body>
   <section class="secone" id="hero">
     <div class="main-container">
       <div class="greeting_wrapper">
-        <h1>Hi I'm Soumyadeep Sinha</h1>
+        <h1>Hi I'm Soumyadeep Sinha
+          <br />
+          A Fullstack Web Developer
+        </h1>
       </div>
       <div class="intro_wrapper">
         <div class="nav_wrapper">
