--- a/post.html
+++ b/post.html
@@ -11,7 +11,7 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/f158d309d9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Soumya'sWebDev | Posts</title>
+  <title>Soumya-WebDev | Posts</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     </ul>
   </div>
   <div class="main-container">
-    <h1>Let's view some of our Projects</h1>
+    <h1>Let's view some of my Projects</h1>
   </div>
   <section class="sectwo" id="ecommerce">
     <div class="main-container">
