update projects & social media handles

--- a/post.html
+++ b/post.html
@@ -140,6 +140,75 @@
       </div>
     </div>
   </section>
+  <section class="secone" id="covid">
+    <div class="main-container">
+      <div class="about_wrapper">
+        <div class="about_me">
+          <h4>Covid-19 Tracker Application</h4> with React
+          <p>This project shows us Current Covid-19 Statictics with a Map & table.
+            We can view current wise Covid-19 Statictics of Total, Activate & Death Cases
+          </p>
+          <hr>
+
+          <h4>USEFUL METHODS</h4>
+
+          <p>Covid-19 Tracker: <a target="_blank" href="https://covid19-trackerapp.web.app/"> Live View </a>
+          </p>
+
+          <div id="skills">
+            <ol>
+              <li>HTML - Main Page</li>
+              <li>CSS - Stylesheet</li>
+              <li>JSX - Frontend</li>
+            </ol>
+            <ol>
+              <li>Use Hooks to update statictics</li>
+              <li>Use Chart.js to display chart</li>
+              <li>Use Leaflet Map to show Country</li>
+            </ol>
+          </div>
+        </div>
+        <div class="social_links">
+          <img src="./assets/images/covid19-tracker.png" alt="Project 3" id="social_img">
+          <h3>Source Code is available on GitHub</h3>
+          <a href="https://github.com/soumyadeepsinha" target="_blank">Github: @soumyadeepsinha</a>
+          <br />
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sectwo" id="restaurant">
+    <div class="main-container">
+      <div class="about_wrapper">
+        <div class="about_me">
+          <h4>The Restro</h4> Restaurant Website
+          <p>This is a Restaurant Website with Several Features like displaying Menu, animations with JavaScript
+          </p>
+          <hr>
+
+          <h4>USEFUL METHODS</h4>
+
+          <p>The Restro: <a target="_blank" href="https://soumyadeepsinha.github.io/TheRestro/"> Live View </a>
+          </p>
+
+          <div id="skills">
+            <ol>
+              <li>HTML - Main Page</li>
+              <li>CSS - Stylesheet</li>
+              <li>JavaScript - Animations</li>
+            </ol>
+            </ol>
+          </div>
+        </div>
+        <div class="social_links">
+          <img src="./assets/images/restro.png" alt="Project 3" id="social_img">
+          <h3>Source Code is available on GitHub</h3>
+          <a href="https://github.com/soumyadeepsinha" target="_blank">Github: @soumyadeepsinha</a>
+          <br />
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="secone">
     <div class="main-container">
       <footer>
@@ -149,9 +218,15 @@
             And Check Out latest posts
           </h4>
           <ul class="social_icons">
-            <li><a href="twitter.com"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="instagram.com"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.twitter.com/soumyadeep_iam/" target="_blank">
+                <i class="fab fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/sinha_soumyadeep/" target="_blank">
+                <i class="fab fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/sinha-soumyadeep/" target="_blank">
+                <i class="fab fa-linkedin"></i></a>
+            </li>
           </ul>
         </div>
         <h5 style="text-align: center;">@ Sinha'sWebDev - 2020</h5>
