--- a/index.html
+++ b/index.html
@@ -187,9 +187,15 @@
             And Check Out latest posts
           </h4>
           <ul class="social_icons">
-            <li><a href="twitter.com"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="instagram.com"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.twitter.com/soumyadeep_iam/" target="_blank">
+                <i class="fab fa-twitter"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/sinha_soumyadeep/" target="_blank">
+                <i class="fab fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/sinha-soumyadeep/" target="_blank">
+                <i class="fab fa-linkedin"></i></a>
+            </li>
           </ul>
         </div>
         <h5 style="text-align: center;">@ Sinha'sWebDev - 2020</h5>
