--- a/post.html
+++ b/post.html
@@ -219,13 +219,21 @@
           </h4>
           <ul class="social_icons">
             <li><a href="https://www.twitter.com/soumyadeep_iam/" target="_blank">
-                <i class="fab fa-twitter"></i></a>
+                <i class="fab fa-twitter"></i>
+              </a>
             </li>
             <li><a href="https://www.instagram.com/sinha_soumyadeep/" target="_blank">
-                <i class="fab fa-instagram"></i></a>
+                <i class="fab fa-instagram"></i>
+              </a>
             </li>
             <li><a href="https://www.linkedin.com/in/sinha-soumyadeep/" target="_blank">
-                <i class="fab fa-linkedin"></i></a>
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://codepen.io/soumyadeepsinha" target="_blank">
+                <i class="fab fa-codepen"></i>
+              </a>
             </li>
           </ul>
         </div>
