--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
             And Check Out latest posts
           </h4>
           <ul class="social_icons">
-            <li><a href="https://www.twitter.com/soumyadeep_iam/" target="_blank">
+            <li><a href="https://www.twitter.com/soumyadeep_27/" target="_blank">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
-            <li><a href="https://www.instagram.com/sinha_soumyadeep/" target="_blank">
+            <li><a href="https://www.instagram.com/soumyadeep.27/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
-            <li><a href="https://www.linkedin.com/in/sinha-soumyadeep/" target="_blank">
+            <li><a href="https://www.linkedin.com/in/soumyadeep27/" target="_blank">
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
